# wavetable_pico

./: .gitignore  CMakeLists.txt  Makefile  hello.c  main.c  main.pio  pico_sdk_import.cmake  readme.md  test.cpp  usb_success.out  wiring.md
docs/: installing.md  macos_with_screen.md  troubleshooting.md  windows_with_PuTTY.md
materials/: wavetable_pico_wiring.ai
releases/: gobbles_picodrive_1.uf2  pico_v0.1_async.uf2  pico_v0.2_async.uf2  pico_v0.3_async.uf2  pico_v0.4_beta.uf2
releases/wavetable_arduino_prototype/: wavetable_arduino_prototype.ino
